overflow fix

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,6 +17,7 @@ body {
   position: relative;
   min-height: 100vh;
   padding-bottom: 50px;
+  overflow-x: hidden;
 }
 #container:before {
   content: "";
